--- a/Consumer/Consumer.csproj
+++ b/Consumer/Consumer.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>Moonpig.Messaging.Consumer</AssemblyName>
+    <RootNamespace>Moonpig.Messaging.Consumer</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
