--- a/Publisher/appsettings.json
+++ b/Publisher/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
-  "ServiceBusConnectionString": "Uses MNP-Skywalker.ESB.PrimaryConnection environment variable locally",
-  "ServiceBusTopicName": "moonpig.services.product.messages.events/productupdated",
+  "ServiceBusConnectionString": "",
+  "ServiceBusTopicName": "services.product.messages.events/productupdated",
   "ServiceBusMessageTimeToLiveInHours": 24,
   "ServiceBusRetryPolicyMinimumBackoffInSeconds": 1,
   "ServiceBusRetryPolicyMaximumBackoffInSeconds": 5,
